2008-05-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.CodeTemplates/CodeTemplateGroup.cs: Fix bug 372041 -
	  Additional code template groups are not loaded after a restart.
	  Patch by Levi Bard.

2008-05-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Templates/CombineDescriptor.cs,
	  MonoDevelop.Ide.Templates/ISolutionItemFeature.cs,
	  MonoDevelop.Ide.Templates/ParentProjectFileTemplateCondition.cs,
	  MonoDevelop.Ide.Templates/SolutionItemDescriptor.cs,
	  MonoDevelop.Ide.Templates/ProjectTemplate.cs,
	  MonoDevelop.Ide.Templates/ISolutionItemDescriptor.cs,
	  MonoDevelop.Ide.Templates/ProjectDescriptor.cs,
	  MonoDevelop.Ide.Commands/RefactoryCommands.cs,
	  MonoDevelop.Ide.Commands/FileCommands.cs,
	  MonoDevelop.Ide.Commands/EditCommands.cs,
	  MonoDevelop.Ide.Commands/SearchCommands.cs,
	  MonoDevelop.Ide.Commands/CustomStringTagProvider.cs,
	  MonoDevelop.Ide.Commands/ProjectCommands.cs,
	  MonoDevelop.Ide/Services.cs,
	  MonoDevelop.Ide.ExternalTools/ExternalToolPanel.cs,
	  MonoDevelop.Ide.Gui.Pads/DefaultMonitorPad.cs,
	  MonoDevelop.Ide.Gui.Pads/FileScout.cs,
	  MonoDevelop.Ide.Gui.Pads/SolutionPad.cs,
	  MonoDevelop.Ide.Gui.Pads/ErrorListPad.cs,
	  MonoDevelop.Ide.Gui.Pads.ClassBrowser/ClassBrowserPadWidget.cs,
	  MonoDevelop.Ide.Gui.Pads.ClassBrowser/ProjectNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Pads.ClassBrowser/SolutionNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Content/TextEditorExtension.cs,
	  MonoDevelop.Ide.Gui.OptionPanels/LoadSavePanel.cs,
	  MonoDevelop.Ide.Gui.Pads.ClassPad/ProjectNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Pads.ClassPad/CombineNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Pads.ClassPad/NamespaceNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Pads.ClassPad/SolutionNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Pads.ProjectPad/WorkspaceNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectFolderNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectFileNodeBuilder.cs,